# ecg

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.py  classgen.py
data/: config.h  config.h.in
data/hrecg5min/: p003.IO$  p003.IOT
libcodec/: CMakeLists.txt
libcodec/include/: BWCoder.h  CommonDef.h  ECStage.h  IFStage.h  TSignal.h
libcodec/src/: BWCoder.cpp  CommonDef.cpp  ECStage.cpp  IFStage.cpp  TSignal.cpp
libcodec/test/: main.cpp
libecg/: CMakeLists.txt
libecg/include/: ECGGenerator.h  ECGSample.h  ECGSignal.h  ECGSignalGenerator.h  IECGGenerator.h  IECGSignal.h  Signal.h  common.h
libecg/src/: ECGGenerator.cpp  ECGSignal.cpp  ECGSignalGenerator.cpp  Signal.cpp
libecg/test/: ECGGeneratorFixture.cpp  ECGGeneratorTests.cpp  ECGSignalGeneratorFixture.cpp  ECGSignalTests.cpp  ECGSignalTests.h  MockECGSignal.h
scripts/: all.bat  build.json  build.py  config.yml  utils.py
